assets/style.css
* {
    margin: 0;
    padding: 0;
}

header {
    position: relative;
    height: 150px;
    background-color: #4d9ffd;
    background-image: url("../img/pattern.png");
    background-position: top;
    background-repeat: repeat;
}

section {
    margin-top: 20px;
}

.content {
    padding: 0 10px;
}

.logo {
    height: 50%;
    padding: 15px;
    position: absolute;
    bottom: 0;
    left: 0;
}

.logo img {
    height: 100%;
    width: 100%;
}

#main-title {
    padding-top: 25px;
}

#main-title > #sub-title {
    color: grey;
    font-weight: 400;
}

#main-title .author-link {
    text-decoration: none;
    color: #0064d4;
}

.photos {
    height: 300px;
}

.photo {
    display: inline-block;
    height: 100%;
}

.photo img {
    max-height: 100%;
    max-width: 100%;
}

ul {
    list-style-position: inside;
/*    senno' puntino di "li" mi esce fuori dal parent container   */
}

/*  ----    TABLE START  ----  */

.table-header {
    background: #20a8e3;
    color: white;
}

.row-color1 {
    background: #b0e3f0;
}

.row-color2 {
    background: #fdfdfd;
}

.column1 {
    width: 20%;
}

.column2 {
    width: 20%;
}

.column3 {
    width: 60%;
}

/*  ----    TABLE END  ----  */

